--- a/Web Source Code/package.json
+++ b/Web Source Code/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "firebase": "^3.7.1",
     "geofire": "^4.1.2",
+    "gmail-send": "^1.2.7",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
